Mega Project : all components, form, pages done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "cSpell.words": [
-        "signup"
+        "shouldvalidate",
+        "signup",
+        "Singup",
+        "tinymce"
     ]
 }
